# xrgears

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/shaders/bloom/: gaussblur.frag  phongpass.frag
data/shaders/cubemap/: reflect.frag  skybox.frag
data/shaders/deferred/: debug.frag  deferred-dummy.frag  mrt-shade.frag  mrt-shade.vert
data/shaders/gears/: gears.frag
data/shaders/hmddistortion/: diffuse-pass.frag  diffuse-pass.vert  distortion.frag  distortion.vert  openhmd-distortion-sps.frag  ph5-distortion.frag
data/shaders/openhmd-distortion/: distortion.frag  distortion.vert
data/shaders/openvr/: build_vulkan_shaders.sh
data/shaders/tutorial/: tutorial.vert
data/shaders/vertex-distortion/: distortion.frag  distortion.vert  noop.vert
data/shaders/xrgears/: multiview.geom  scene.frag  scene.vert  sky.frag  sky.geom  sky.vert
examples/bloom/: bloom.cpp
examples/cube/: cube.cpp
examples/debugmarker/: debugmarker.cpp
examples/deferred-minimal/: deferred-minimal.cpp
examples/gears/: gears.cpp  vulkangear.cpp  vulkangear.h
examples/glfw-test/: glfw-test.cpp
examples/hmddistortion/: VikDistortion.hpp  VikOffscreenPass.hpp  hmddistortion.cpp
examples/lensdistortion/: lensdistortion.cpp
examples/pbrbasic/: pbrbasic.cpp
examples/pbribl/: pbribl.cpp
examples/texturecubemap/: texturecubemap.cpp
examples/triangle/: triangle.cpp
examples/tutorial/: pipeline.h  queue.h  swapchain.h  tutorial.cpp
examples/vkcube/: VikRenderer.cpp  VikRenderer.hpp  application.cpp  application.hpp  common.h  cube.cpp  cube.hpp  display.hpp  kms.hpp  main.c  main.cpp  silo.h  vk.hpp  wayland.hpp  xcb.hpp
examples/xrcube/: xrcube.cpp
examples/xrcubemap/: xrcubemap.cpp
examples/xrgears/: Gear.cpp  Gear.h  GearNode.cpp  GearNode.h  SkyDome.cpp  SkyDome.h  uniformbuffers.h  vulkangear.cpp  vulkangear.h  xrgears.cpp
fonts/: stb_font_consolas_24_latin1.inl
scripts/: runhelper.sh
shaders/cubemap/: skybox.frag  skybox.vert
shaders/hmddistortion/: ph5-distortion.frag
shaders/xrgears/: multiview.geom  scene.frag  scene.vert  scene_no_sky.frag  sky.geom  sky.vert
src/: VulkanDevice.hpp  VulkanInitializers.hpp  VulkanSwapChain.hpp  VulkanTextOverlay.hpp  VulkanTools.h  camera.hpp  gears.cpp  keycodes.hpp  vulkandevice.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h  vulkangear.cpp  vulkangear.h  vulkanswapchain.hpp  vulkantextoverlay.hpp  vulkantools.cpp  vulkantools.h
vitamin-k/: VikAssets.hpp  VikBuffer.hpp  VikCamera.hpp  VikCameraHMD.hpp  VikCameraStereo.hpp  VikDistortion.hpp  VikGear.hpp  VikGearNode.hpp  VikHMD.hpp  VikMaterial.hpp  VikNode.hpp  VikNodeGear.hpp  VikNodeModel.hpp  VikOffscreenPass.hpp  VikShader.hpp  VikSkyBox.hpp  VikSkyCube.hpp  VikSkyDome.hpp  vikApplication.hpp  vikApplicationVkc.hpp  vikApplicationVks.hpp  vikAssets.hpp  vikBuffer.hpp  vikCamera.hpp  vikCameraBase.hpp  vikCameraHMD.hpp  vikCameraStereo.hpp  vikDebug.hpp  vikDevice.hpp  vikDistortion.hpp  vikGear.hpp  vikHMD.hpp  vikInitializers.hpp  vikInput.hpp  vikLog.hpp  vikMaterial.hpp  vikModel.hpp  vikNode.hpp  vikNodeGear.hpp  vikNodeModel.hpp  (+26 more)
vitamin-k/input/: vikHMD.hpp  vikInput.hpp
vitamin-k/render/: vikBuffer.hpp  vikDebug.hpp  vikDevice.hpp  vikDistortion.hpp  vikInitializers.hpp  vikModel.hpp  vikOffscreenPass.hpp  vikRenderer.hpp  vikRendererTextOverlay.hpp  vikRendererVkc.hpp  vikRendererVks.hpp  vikShader.hpp  vikSwapChain.hpp  vikSwapChainDRM.hpp  vikSwapChainVK.hpp  vikSwapChainVKComplex.hpp  vikTextOverlay.hpp  vikTexture.hpp  vikTimer.hpp  vikTools.hpp
vitamin-k/scene/: vikCamera.hpp  vikCameraArcBall.hpp  vikCameraBase.hpp  vikCameraFirstPerson.hpp  vikCameraHMD.hpp  vikCameraStereo.hpp  vikGear.hpp  vikMaterial.hpp  vikNode.hpp  vikNodeGear.hpp  vikNodeModel.hpp  vikSkyBox.hpp
vitamin-k/system/: vikApplication.hpp  vikApplicationVkc.hpp  vikApplicationVks.hpp  vikAssets.hpp  vikLog.hpp  vikSettings.hpp
vitamin-k/window/: vikWindow.hpp  vikWindowDirectMode.hpp  vikWindowDirectWayland.hpp  vikWindowKMS.hpp  vikWindowKhrDisplay.hpp  vikWindowWayland.hpp  vikWindowWaylandShell.hpp  vikWindowWaylandXDG.hpp  vikWindowXCB.hpp  vikWindowXCBInput.hpp  vikWindowXCBSimple.hpp
vkc/: vkcApplication.cpp  vkcApplication.hpp  vkcCube.hpp  vkcRenderer.cpp  vkcRenderer.hpp  vkcSwapChain.hpp  vkcSwapChainDRM.hpp  vkcSwapChainVK.hpp  vkcWindow.hpp  vkcWindowKMS.hpp  vkcWindowWayland.hpp  vkcWindowXCB.hpp
vks/: VulkanModel.hpp  VulkanTexture.hpp  camera.hpp  vksApplication.cpp  vksApplication.hpp  vksBuffer.hpp  vksCamera.hpp  vksDebug.cpp  vksDebug.hpp  vksDevice.hpp  vksFrameBuffer.hpp  vksInitializers.hpp  vksKeyCodes.hpp  vksLog.hpp  vksModel.hpp  vksRenderer.cpp  vksRenderer.h  vksRenderer.hpp  vksSettings.hpp  vksSwapChain.hpp  vksTextOverlay.hpp  vksTexture.hpp  vksTimer.hpp  vksTools.cpp  vksTools.hpp  vksWindow.hpp  vksWindowDisplay.hpp  vksWindowKMS.hpp  vksWindowWayland.hpp  vksWindowXCB.hpp  vksWindowXCBMinimal.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
